--- a/educhat/style.css
+++ b/educhat/style.css
@@ -69,9 +69,10 @@ nav ul li a:hover{
         text-decoration:none;
         color:aliceblue;
         font-size: 25px;
+        margin-left: 35px;
         justify-content:space-between;
         padding:15px 50px;
-        margin-top: 10px;
+        margin-top: 30px;
         
     }      
 .text {
@@ -108,26 +109,64 @@ nav ul li a:hover{
     gap:20px;
     font-size: 20px;
     font-weight:bold;
+
+}
+/*.image-container {
+  display: flex;
+  justify-content: space-evenly; 
+  align-items: center; 
+  margin:20px; 
+  gap: 40px;          
 }
 
-.containers .ab ul li a{
+.image-container img {
+  width: 200px;   
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+}*/
+
+
+.containers .ab p{
+    /* margin-right: 60px; */
     text-decoration:none;
     color:black;
-    font-size: 30px;
+    font-size: 25px;
     font: weight 100px;;
     align-items:center;
     justify-content: center;
+    font-weight: bold;               
    
 }
+.features {
+  display: flex;
+  justify-content: space-evenly; 
+  align-items: center;
+  margin: 40px 0;
+  text-align: center;           
+}
+
+.feature-item {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;    
+}
+
+.feature-item img {
+  width: 250px;            
+  height: 200px;
+  margin-bottom: 10px;    
+}
+
     
-    .containers .ab ul li a:hover{
+    .containers .ab p:hover{
         color:rgb(77, 77, 167);
 }
 footer{
     display:flex;
     justify-content:center;
     align-items:center;
-    padding:15px 50px;
+    padding:15px 80px;
     background-color:aliceblue;
     margin-bottom: 50px;
     padding-top: 50px;   
