--- a/src/components/mainbot/chat.css
+++ b/src/components/mainbot/chat.css
@@ -1,168 +1,335 @@
 .main{
-    flex: 1;
-    min-height: 100vh;
-    padding-bottom: 15vh;
-    position: relative;
+  display:flex;
+  flex-direction:column;
+  min-height: 100vh;
+  position: relative;
 }
 
 .main .nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 50px;
-    padding: 20px;
-    color:#585858;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 50px;
+  padding: 20px;
+  color:#585858;
 }
 
 .main .nav p{
-    color: rgb(35, 35, 203);
-   font-weight: 450;
+  color: #4285f4;
+ font-weight: 450;
 }
 
 .main .nav img{
-    width: 100px;
-    
+  width: 100px;
+  
 }
 
 .main-container{
-    max-width: 900px;
-    margin:auto;
+  max-width: 900px;
+  margin:auto;
+  flex: 1;
+  padding-bottom: 150px;
 }
 .main .greet{
-    margin: 170px 0px;
-    font-size: 70px;
-    color: #c4c7c5;
-    font-weight: 500;
-    padding: 40px;
+  margin: 170px 0px;
+  font-size: 70px;
+  color: #c4c7c5;
+  font-weight: 500;
+  padding: 40px;
 }
 .main .greet span{
-    background: -webkit-linear-gradient(16deg,#4b90ff,#ff5546);
-    -webkit-background-clip : text;
-    -webkit-text-fill-color: transparent;
+  background: -webkit-linear-gradient(16deg,#4b90ff,#ff5546);
+  -webkit-background-clip : text;
+  -webkit-text-fill-color: transparent;
 }
 
 .main-bottom{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    max-width:1300px;
-    padding: 160px 10px;
-    margin: 100px;
-    margin-bottom: 20px;
-    margin-right: 30px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  max-width:1300px;
+  padding: 20x 40px;
+  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 10;
+  margin-bottom: 20px;
+  margin-right: 30px;
 
 }
 .search-box{
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
-    justify-content: space-between;
-    background-color: #f0f4f9;
-    padding: 20px ;
-    border-radius: 50px;
-    margin-top: 80px !important;
-    
-    
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  justify-content: space-between;
+  background-color: #f0f4f9;
+  padding: 20px ;
+  border-radius: 50px;
+  width: 100%;
+  max-width:900px;
+
+  
+  
 }
 .search-box img{
-    width: 28px;
-    cursor: pointer;
+  width: 28px;
+  cursor: pointer;
 }
 
 .search-box input{
-    flex: 1;
-    background:transparent;
-    border: none;
-    outline: none;
-    padding: 10px;
-    font-size: 30px;
+  flex: 1;
+  background:transparent;
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 30px;
 }
 
 .search-box div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
 }
 
 .main .bottom-info{
-    font-size: 15px;
-    margin: 15px auto;
-    text-align:center;
-    font-weight: 300;
-    
+  font-size: 15px;
+  margin: 15px auto;
+  text-align:center;
+  font-weight: 300;
+  
 }
 
 .result{
-    padding: 0px 5%;
-    max-height: 51vh;
-    overflow-y: scroll; /*scrolling content*/
+ 
+  margin-left: 60px;
+  padding-right: 40px;
+  max-height:51vh;
+  overflow-y: scroll; /*scrolling content*/
+  
 }
 
 /*.result::-webkit-scrollbar{
-    display: none;
+  display: none;
 }*/
 
 .result-title{
-    margin: 50px 0px;
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: 20px;
+  margin: 50px 0px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 20px;
 }
 .result img{
-    width: 40px;
-    border-radius: 50%;
+  width: 40px;
+  border-radius: 50%;
 }
 .result-data{
-    display: flex;
-    align-items: start;
-    gap: 20px;
-    font-size: 20px;
+  display: flex;
+  align-items: start;
+  gap: 20px;
+  font-size: 20px;
+  .main{
+  display:flex;
+  flex-direction:column;
+  min-height: 100vh;
+  position: relative;
+}
+
+.main .nav{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 50px;
+  padding: 20px;
+  color:#585858;
+}
+
+.main .nav p{
+  color: rgb(35, 35, 203);
+ font-weight: 450;
+}
+
+.main .nav img{
+  width: 100px;
+  
+}
+
+.main-container{
+  max-width: 900px;
+  margin:auto;
+  flex: 1;
+  padding-bottom: 150px;
+}
+.main .greet{
+  margin: 170px 0px;
+  font-size: 70px;
+  color: #c4c7c5;
+  font-weight: 500;
+  padding: 40px;
+}
+.main .greet span{
+  background: -webkit-linear-gradient(16deg,#4b90ff,#ff5546);
+  -webkit-background-clip : text;
+  -webkit-text-fill-color: transparent;
+}
+
+.main-bottom{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  max-width:1300px;
+  padding: 20x 40px;
+  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 10;
+  margin-bottom: 20px;
+  margin-right: 30px;
+
+}
+.search-box{
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  justify-content: space-between;
+  background-color: #f0f4f9;
+  padding: 20px ;
+  border-radius: 50px;
+  width: 100%;
+  max-width:900px;
+
+  
+  
+}
+.search-box img{
+  width: 28px;
+  cursor: pointer;
+}
+
+.search-box input{
+  flex: 1;
+  background:transparent;
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 30px;
+}
+
+.search-box div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.main .bottom-info{
+  font-size: 15px;
+  margin: 15px auto;
+  text-align:center;
+  font-weight: 300;
+  
+}
+
+.result{
+  padding: 0px 5%;
+  max-height:51vh;
+  overflow-y: scroll; /*scrolling content*/
+}
+
+/*.result::-webkit-scrollbar{
+  display: none;
+}*/
+
+.result-title{
+  margin: 50px 0px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 20px;
+}
+.result img{
+  width: 40px;
+  border-radius: 50%;
+}
+.result-data{
+  display: flex;
+  align-items: start;
+  gap: 20px;
+  font-size: 20px;
+    font-weight: 300;
+    line-height:1.7
 }
 
 .loader{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap:10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
 }
 
 .loader hr{
-    border-radius: 4px;
-    border: none;
-    background-color: #f6f7f8;
-    background: linear-gradient(to right,#9ed7ff,#ffffff,#9ed7ff);
-    height: 20px;
+  border-radius: 4px;
+  border: none;
+  background-color: #f6f7f8;
+  background: linear-gradient(to right,#9ed7ff,#ffffff,#9ed7ff);
+  height: 20px;
 }
 
 @keyframes loader{
-    0%{
-        background-position: -800px 0px;
-    }
-    100%{
-        background-position: 800px 0px;
-    }
+  0%{
+      background-position: -800px 0px;
+  }
+  100%{
+      background-position: 800px 0px;
+  }
+}
 }
 
-.result-data{
-    font-weight: 300;
-    line-height:1.7;
+.loader{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
 }
+
+.loader hr{
+  border-radius: 4px;
+  border: none;
+  background-color: #f6f7f8;
+  background: linear-gradient(to right,#9ed7ff,#ffffff,#9ed7ff);
+  height: 20px;
+}
+
+@keyframes loader{
+  0%{
+      background-position: -800px 0px;
+  }
+  100%{
+      background-position: 800px 0px;
+  }
+}
+
 
 /*@media (max-width:600px) {
-   .main-bottom input{
-    flex: none ;
-    width: 150px;
-   }
-   .main-bottom img{
-    width: 20px;
-   }
-   .search-box{
-    padding: 5px 10px;
-   }
-   .search-box div{
-    gap: 5px;
-   }
+ .main-bottom input{
+  flex: none ;
+  width: 150px;
+ }
+ .main-bottom img{
+  width: 20px;
+ }
+ .search-box{
+  padding: 5px 10px;
+ }
+ .search-box div{
+  gap: 5px;
+ }
 }
 */
